--- a/apps/admin/deployment.yaml
+++ b/apps/admin/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: admin
-          image: alpine:latest
+          image: rockylinux:9.1-minimal
           env:
             - name: TZ
               value: Europe/Zurich
@@ -25,7 +25,7 @@ spec:
           args:
             - |
               echo starting init;
-              apk add curl unzip gcompat;
+              dnf install curl unzip;
               curl -LO https://dl.k8s.io/v1.24.10/bin/linux/amd64/kubectl;
               chmod +x kubectl;
               mv ./kubectl /bin/kubectl;
