--- a/apps/admin/deployment.yaml
+++ b/apps/admin/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           args:
             - |
               echo starting init;
-              dnf install curl unzip;
+              yum install curl unzip;
               curl -LO https://dl.k8s.io/v1.24.10/bin/linux/amd64/kubectl;
               chmod +x kubectl;
               mv ./kubectl /bin/kubectl;
