--- a/apps/admin/deployment.yaml
+++ b/apps/admin/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: admin
-          image: rockylinux:latest
+          image: rockylinux:9.1
           env:
             - name: TZ
               value: Europe/Zurich
