--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -49,3 +49,11 @@ argo-cd:
     metrics: *metrics
   redis:
     metrics: *metrics
+    image:
+      # -- Redis repository
+      repository: public.ecr.aws/docker/library/redis
+      # -- Redis tag
+      tag: 7.0.7-alpine
+      # -- Redis image pull policy
+      # @default -- `""` (defaults to global.image.imagePullPolicy)
+      imagePullPolicy: ""
