--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -34,10 +34,10 @@ argo-cd:
         - secretName: argocd-tls-certificate
           hosts:
             - *host
-    # metrics: &metrics
-    #   enabled: true
-    #   serviceMonitor:
-    #     enabled: true
+    metrics: &metrics
+      enabled: false
+      serviceMonitor:
+        enabled: false
   dex:
     enabled: false
   # controller:
