--- a/system/longhorn-system/values.yaml
+++ b/system/longhorn-system/values.yaml
@@ -13,12 +13,12 @@ longhorn:
     enabled: true
     ingressClassName: nginx
     annotations:
+      nginx.ingress.kubernetes.io/auth-type: basic
+      nginx.ingress.kubernetes.io/auth-secret: basic-auth
+      nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
       cert-manager.io/cluster-issuer: letsencrypt-prod
       hajimari.io/appName: Longhorn
       hajimari.io/icon: google-drive
     host: longhorn.tribz.cloud
     tls: true
     tlsSecret: longhorn-tls-certificate
-      # - secretName: longhorn-tls-certificate
-      #   hosts:
-      #     - *host
