--- a/apps/tts-discordbot/templates/deployment.yaml
+++ b/apps/tts-discordbot/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: tts-discordbot
         # image: core.harbor.tribz.cloud/homelab/tts-discordbot:latest
-        image: core.harbor.tribz.cloud/homelab/discord-google-tts:latest
+        image: harbor-core.harbor.svc.cluster.local/homelab/discord-google-tts:latest
         env:
           - name: TZ
             value: "Europe/Zurich"
