--- a/platform/harbor/values.yaml
+++ b/platform/harbor/values.yaml
@@ -22,6 +22,7 @@ harbor:
         cert-manager.io/cluster-issuer: letsencrypt-prod
         hajimari.io/appName: Harbor
         hajimari.io/icon: git
+        nginx.ingress.kubernetes.io/proxy-body-size: "10g"
     tls:
       enabled: true
       certSource: secret
