--- a/system/longhorn-system/values.yaml
+++ b/system/longhorn-system/values.yaml
@@ -4,6 +4,8 @@ longhorn:
     replicaAutoBalance: best-effort
     defaultDataLocality: best-effort
     backupTarget: nfs://truenas.tribz.cloud:/mnt/tank/k8s/nfs/longhorn-backup
+    snapshotDataIntegrity: fast-check
+    removeSnapshotsDuringFilesystemTrim: enabled
   persistence:
     # If you have three or more nodes for storage, use 3; otherwise use 2
     defaultClassReplicaCount: 3  # TODO run DR test to see if we actually need 3
