--- a/apps/matrix/values-dendrite.yaml
+++ b/apps/matrix/values-dendrite.yaml
@@ -1,50 +1,3 @@
-env:
-  TZ: Europe/Zurich
-polylith: false
-image:
-  # name: "locmai/dendrite-monolith:010922"  # TODO switch to official image
-  name: "matrixdotorg/dendrite-monolith:latest"  # TODO switch to official image
-  pullPolicy: IfNotPresent
-configuration:
-  version: 2
-  servername: &backend_host matrix.tribz.cloud
-  database:
-    host: matrix-postgresql:5432
-    user: dendrite
-    password: dendrite
-    max_open_conns: 100
-    max_idle_conns: 2
-    conn_max_lifetime: -1
-  metrics:
-    enabled: true
-  jetstream:
-    in_memory: false
-    addresses:
-      - nats://matrix-nats:4222
-persistence:
-  storageClass: longhorn
-  logs:
-    capacity: 1Gi
-  media:
-    capacity: 5Gi
-nats:
-  enabled: true
-  nats:
-    jetstream:
-      enabled: true
-postgresql:
-  enabled: true
-  global:
-    postgresql:
-      postgresqlDatabase: dendrite
-      postgresqlUsername: dendrite
-      postgresqlPassword: dendrite
-  persistence:
-    enabled: true
-    storageClass: longhorn
-    accessModes:
-      - ReadWriteOnce
-    size: 5Gi
 ingress:
   enabled: true
   className: nginx
@@ -55,11 +8,16 @@ ingress:
     nginx.ingress.kubernetes.io/proxy-body-size: 32m
     hajimari.io/enable: 'false'
   hosts:
-    - host: *backend_host
+    - host: &host matrix.tribz.cloud
       paths:
         - path: /
           pathType: Prefix
   tls:
     - secretName: dendrite-tls-certificate
       hosts:
-        - *backend_host
+        - *host
+prometheus:
+  servicemonitor:
+    enabled: true
+  rules:
+    enabled: true
