--- a/apps/matrix/kustomization.yaml
+++ b/apps/matrix/kustomization.yaml
@@ -10,7 +10,7 @@ helmCharts:
   valuesFile: values-elementweb.yaml
   includeCRDs: true
 - name: dendrite
-  repo: https://matrix-org.github.io/dendrite/charts
+  repo: https://matrix-org.github.io/dendrite/
   version: "0.12.0"
   releaseName: matrix
   namespace: matrix
