--- a/apps/matrix/kustomization.yaml
+++ b/apps/matrix/kustomization.yaml
@@ -11,7 +11,7 @@ helmCharts:
   includeCRDs: true
 - name: dendrite
   repo: https://matrix-org.github.io/dendrite/
-  version: "0.12.0"
+  version: 0.11.2
   releaseName: matrix
   namespace: matrix
   valuesFile: values-dendrite.yaml
