push dendrite official helm

--- a/apps/matrix/values-dendrite.yaml
+++ b/apps/matrix/values-dendrite.yaml
@@ -2,6 +2,8 @@ dendrite_config:
   version: 2
   global:
     server_name: &host matrix.tribz.cloud
+persistence:
+  storageClass: longhorn
 postgresql:
   enabled: true
   persistence:
