--- a/apps/matrix/kustomization.yaml
+++ b/apps/matrix/kustomization.yaml
@@ -17,28 +17,28 @@ helmCharts:
   valuesFile: values-dendrite.yaml
   includeCRDs: true
 
-# patchesJson6902:
-#   - target:
-#       group: apps
-#       version: v1
-#       kind: Deployment
-#       name: monolith
-#     patch: |-
-#       - op: add
-#         path: "/spec/template/spec/containers/0/args/-"
-#         value: "-really-enable-open-registration"
+patchesJson6902:
+  - target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: monolith
+    patch: |-
+      - op: add
+        path: "/spec/template/spec/containers/0/args/-"
+        value: "-really-enable-open-registration"
 #       - op: add
 #         path: "/spec/template/spec/containers/0/args/-"
 #         value: "--skip-db-sanity"
-#   - target:
-#       group: apps
-#       version: v1
-#       kind: Deployment
-#       name: matrix-elementweb
-#     patch: |-
-#       - op: replace
-#         path: "/spec/template/spec/containers/0/image"
-#         value: "vectorim/element-web:latest"
+  - target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: matrix-elementweb
+    patch: |-
+      - op: replace
+        path: "/spec/template/spec/containers/0/image"
+        value: "vectorim/element-web:latest"
 #   - target:
 #       group: apps
 #       version: v1
