--- a/apps/matrix/kustomization.yaml
+++ b/apps/matrix/kustomization.yaml
@@ -22,7 +22,7 @@ patchesJson6902:
       group: apps
       version: v1
       kind: Deployment
-      name: monolith
+      name: matrix-dendrite
     patch: |-
       - op: add
         path: "/spec/template/spec/containers/0/args/-"
