--- a/apps/matrix/values-dendrite.yaml
+++ b/apps/matrix/values-dendrite.yaml
@@ -37,5 +37,9 @@ ingress:
 prometheus:
   servicemonitor:
     enabled: true
+    labels:
+      release: "monitoring-system"
   rules:
     enabled: true
+    labels:
+      release: "monitoring-system"
