--- a/system/monitoring-system/values.yaml
+++ b/system/monitoring-system/values.yaml
@@ -69,7 +69,8 @@ grafana:
     - name: Elasticsearch
       type: elasticsearch
       access: proxy
-      url: https://elasticsearch.tribz.cloud
+      # url: https://elasticsearch.tribz.cloud
+      url: "http://elasticsearch-master.elasticsearch.svc.cluster.local"
       database: graylog_2
       jsonData:
         timeField: "timestamp"
