--- a/system/monitoring-system/values.yaml
+++ b/system/monitoring-system/values.yaml
@@ -70,7 +70,7 @@ grafana:
       type: elasticsearch
       access: proxy
       # url: https://elasticsearch.tribz.cloud
-      url: "http://elasticsearch-master.elasticsearch.svc.cluster.local"
+      url: "https://elasticsearch-master.elasticsearch.svc.cluster.local"
       database: graylog_2
       jsonData:
         timeField: "timestamp"
