--- a/apps/elasticsearch/values.yaml
+++ b/apps/elasticsearch/values.yaml
@@ -27,3 +27,6 @@ elasticsearch:
      - secretName: elasticsearch-tls-certificate
        hosts:
          - *host
+  esConfig:
+    elasticsearch.yml: |
+      xpack.security.enabled: false
