--- a/apps/nextcloud/values.yaml
+++ b/apps/nextcloud/values.yaml
@@ -9,15 +9,15 @@ nextcloud:
     enabled: true
   ingress:
     enable: true
-    annotations:
-      kubernetes.io/ingress.class: "nginx"
-      cert-manager.io/cluster-issuer: letsencrypt-prod
-      # external-dns.alpha.kubernetes.io/target: "homelab-tunnel.tribz.cloud"
-      # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
-      hajimari.io/appName: Nextcloud
-      hajimari.io/icon: google-drive
-      # nginx.ingress.kubernetes.io/proxy-body-size: "10g"
-    tls:
-      - secretName: nextcloud-tls-certificate
-        hosts:
-          - nextcloud.tribz.cloud
+    # annotations:
+    #   kubernetes.io/ingress.class: "nginx"
+    #   cert-manager.io/cluster-issuer: letsencrypt-prod
+    #   # external-dns.alpha.kubernetes.io/target: "homelab-tunnel.tribz.cloud"
+    #   # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
+    #   hajimari.io/appName: Nextcloud
+    #   hajimari.io/icon: google-drive
+    #   # nginx.ingress.kubernetes.io/proxy-body-size: "10g"
+    # tls:
+    #   - secretName: nextcloud-tls-certificate
+    #     hosts:
+    #       - nextcloud.tribz.cloud
