--- a/platform/gitea/values.yaml
+++ b/platform/gitea/values.yaml
@@ -24,7 +24,8 @@ gitea:
         ROOT_URL: https://git.tribz.cloud
   persistence:
     storageClass: longhorn
-  postgresql:
-    persistence:
-      storageClass: longhorn
-      # size: 2Gi
+  primary:
+    postgresql:
+      persistence:
+        storageClass: longhorn
+        # size: 2Gi
