--- a/apps/xmrig/Chart.yaml
+++ b/apps/xmrig/Chart.yaml
@@ -4,4 +4,4 @@ version: 0.0.0
 dependencies:
   - name: xmrig
     version: 0.3.2
-    repository: https://metal3d.github.io/helm/
+    repository: https://raw.githubusercontent.com/metal3d/docker-xmrig/master
