--- a/apps/xmrig/values.yaml
+++ b/apps/xmrig/values.yaml
@@ -34,7 +34,7 @@ xmrig:
   worker:
     url: gulf.moneroocean.stream:10001
     wallet: "Your public monero address"
-    password: "can be empty for some pool, other use that as miner id"
+    pass: "can be empty for some pool, other use that as miner id"
     
   access_token: ""
 
