--- a/apps/xmrig/templates/service.yaml
+++ b/apps/xmrig/templates/service.yaml
@@ -5,9 +5,9 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 80
-      targetPort: http
-      protocol: TCP
+    - port: 3000
+    #   targetPort: http
+    #   protocol: TCP
       name: http
   selector:
     app: xmrig
