--- a/apps/xmrig/templates/deployment.yaml
+++ b/apps/xmrig/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
               #     name: {{ .Release.Name }}-pool-secret
               #     key: POOL_PASS
             - name: POOL_URL
-              value: pool.supportxmr.com:5555
+              value: gulf.moneroocean.stream:5555
             - name: DONATE_LEVEL
               value: "0"
           securityContext:
