--- a/apps/xmrig/templates/deployment.yaml
+++ b/apps/xmrig/templates/deployment.yaml
@@ -30,13 +30,17 @@ spec:
               value: gulf.moneroocean.stream:10128
             - name: DONATE_LEVEL
               value: "0"
-          resources:
-            requests:
-              memory: "2048Mi"
-              cpu: "1000m"
-            limits:
-              memory: "6144Mi"
-              cpu: "5000m"
+            - name: PRIORITY
+              value: "1"
+            - name: THREADS
+              value: "4"
+          # resources:
+          #   requests:
+          #     memory: "2048Mi"
+          #     cpu: "1000m"
+          #   limits:
+          #     memory: "6144Mi"
+          #     cpu: "5000m"
           ports:
             - name: http
               containerPort: 3000
