--- a/apps/xmrig/templates/deployment.yaml
+++ b/apps/xmrig/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: xmrig
 spec:
-  replicas: 1
+  replicas: 4
   revisionHistoryLimit: 3
   selector:
     matchLabels:
@@ -34,13 +34,13 @@ spec:
               value: "1"
             - name: THREADS
               value: "4"
-          # resources:
-          #   requests:
-          #     memory: "2048Mi"
-          #     cpu: "1000m"
-          #   limits:
-          #     memory: "6144Mi"
-          #     cpu: "5000m"
+          resources:
+            requests:
+              memory: "2048Mi"
+              cpu: "1000m"
+            limits:
+              memory: "6144Mi"
+              cpu: "4000m"
           ports:
             - name: http
               containerPort: 3000
