--- a/apps/xmrig/templates/deployment.yaml
+++ b/apps/xmrig/templates/deployment.yaml
@@ -30,10 +30,10 @@ spec:
               value: gulf.moneroocean.stream:10128
             - name: DONATE_LEVEL
               value: "0"
-            - name: PRIORITY
-              value: "1"
-            - name: THREADS
-              value: "4"
+            # - name: PRIORITY
+            #   value: "0"
+            # - name: THREADS
+            #   value: "4"
           resources:
             requests:
               memory: "2048Mi"
