--- a/apps/xmrig/templates/deployment.yaml
+++ b/apps/xmrig/templates/deployment.yaml
@@ -34,13 +34,13 @@ spec:
               value: "0"
             - name: THREADS
               value: "1"
-          resources:
-            requests:
-              memory: "2048Mi"
-              cpu: "1000m"
-            limits:
-              memory: "6144Mi"
-              cpu: "1500m"
+          # resources:
+          #   requests:
+          #     memory: "2048Mi"
+          #     cpu: "1000m"
+          #   limits:
+          #     memory: "6144Mi"
+          #     cpu: "1500m"
           ports:
             - name: http
               containerPort: 3000
