--- a/apps/xmrig/templates/externalsecret.yaml
+++ b/apps/xmrig/templates/externalsecret.yaml
@@ -7,12 +7,9 @@ spec:
     kind: ClusterSecretStore
     name: vault
   target:
-    template:
-      engineVersion: v2
-      data:
-        PUBKEY: {{` "{{ .pubkey }}" `}}
+    creationPolicy: Owner
   data:
-    - secretKey: token
+    - secretKey: pubkey
       remoteRef:
         key: /monero
         property: pubkey
