--- a/platform/gitea/values.yaml
+++ b/platform/gitea/values.yaml
@@ -29,3 +29,10 @@ gitea:
       persistence:
         storageClass: longhorn
         # size: 2Gi
+  resources:
+    limits:
+      cpu: 500m
+      memory: 512Mi
+    requests:
+      cpu: 100m
+      memory: 256Mi
