--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -66,11 +66,11 @@ argo-cd:
       # -- Enable Prometheus redis-exporter sidecar
       enabled: true
       ## Prometheus redis-exporter image
-      image:
-        # -- Repository to use for the redis-exporter
-        repository: public.ecr.aws/bitnami/redis-exporter
-        # -- Tag to use for the redis-exporter
-        tag: 1.45.0
-        # -- Image pull policy for the redis-exporter
-        # @default -- `""` (defaults to global.image.imagePullPolicy)
-        imagePullPolicy: ""
+      # image:
+      #   # -- Repository to use for the redis-exporter
+      #   repository: public.ecr.aws/bitnami/redis-exporter
+      #   # -- Tag to use for the redis-exporter
+      #   tag: 1.45.0
+      #   # -- Image pull policy for the redis-exporter
+      #   # @default -- `""` (defaults to global.image.imagePullPolicy)
+      #   imagePullPolicy: ""
