--- a/apps/chatgpt-api/templates/ingress.yaml
+++ b/apps/chatgpt-api/templates/ingress.yaml
@@ -9,8 +9,9 @@ metadata:
     # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
     hajimari.io/appName: chatgpt-api
     hajimari.io/icon: multimedia
-    nginx.org/proxy-connect-timeout: "180s"
-    nginx.org/proxy-read-timeout: "180s"
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
 spec:
   ingressClassName: nginx
   tls:
