--- a/platform/harbor/values.yaml
+++ b/platform/harbor/values.yaml
@@ -32,3 +32,6 @@ harbor:
   externalURL: https://core.harbor.tribz.cloud
   updateStrategy:
     type: Recreate
+  persistentVolumeClaim:
+    registry:
+      size: "8589934592"
