--- a/apps/nextcloud/templates/externalsecret.yaml
+++ b/apps/nextcloud/templates/externalsecret.yaml
@@ -9,7 +9,7 @@ spec:
   target:
     creationPolicy: Owner
   data:
-    - secretKey: pubkey
+    - secretKey: password
       remoteRef:
         key: /nextcloudadmin
         property: password
