--- a/apps/nextcloud/values.yaml
+++ b/apps/nextcloud/values.yaml
@@ -6,6 +6,7 @@ nextcloud:
       enabled: true
       secretName: nextcloudadmin
       passwordKey: password
+      usernameKey: admin
     extraEnv:
       - name: TRUSTED_PROXIES
         value: '10.42.0.0/16'
