--- a/apps/nextcloud/templates/externalsecret.yaml
+++ b/apps/nextcloud/templates/externalsecret.yaml
@@ -14,4 +14,6 @@ spec:
         key: /nextcloudadmin
         property: password
     - secretKey: username
-      value: admin
+      remoteRef:
+        key: /nextcloudadmin
+        property: username
