--- a/apps/mediastack/values.yaml
+++ b/apps/mediastack/values.yaml
@@ -231,6 +231,10 @@ prowlarr:
     config:
       enabled: true
       size: 2Gi
+    data:
+      enabled: true
+      mountPath: /data
+      existingClaim: mediastack-data
   image:
     repository: lscr.io/linuxserver/prowlarr
     tag: develop
@@ -250,6 +254,36 @@ prowlarr:
               pathType: Prefix
       tls:
         - secretName: prowlarr-tls-certificate
+          hosts:
+            - *host
+overseer:
+  controller:
+    replicas: 1
+  env:
+    TZ: Europe/Zurich
+  persistence:
+    config:
+      enabled: true
+      size: 2Gi
+  image:
+    repository: lscr.io/linuxserver/overseerr
+    tag: develop
+  ingress:
+    main:
+      enabled: true
+      ingressClassName: nginx
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt-prod
+        hajimari.io/appName: overseerr
+        hajimari.io/icon: sync
+        hajimari.io/group: arr
+      hosts:
+        - host: &host overseerr.tribz.cloud
+          paths:
+            - path: /
+              pathType: Prefix
+      tls:
+        - secretName: overseerr-tls-certificate
           hosts:
             - *host
 bazarr:
