--- a/apps/mediastack/templates/jellyseerr-ingress.yaml
+++ b/apps/mediastack/templates/jellyseerr-ingress.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: mediastack
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    # external-dns.alpha.kubernetes.io/target: "homelab-tunnel.tribz.cloud"
-    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
+    external-dns.alpha.kubernetes.io/target: "homelab-tunnel.tribz.cloud"
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
     hajimari.io/appName: jellyseerr
     hajimari.io/icon: multimedia
 spec:
