--- a/apps/guacamole/values.yaml
+++ b/apps/guacamole/values.yaml
@@ -32,5 +32,5 @@ guacamole:
 postgresql:
   auth:
     username: guacamole
-    postgresPassword: password
+    password: password
     database: guacamole
