--- a/system/monitoring-system/values.yaml
+++ b/system/monitoring-system/values.yaml
@@ -119,7 +119,7 @@ prometheus:
       - job_name: dendrite
         static_configs:
           - targets: 
-            - matrix-dendrite.matrix.svc.cluster.local
+            - matrix-dendrite.matrix.svc.cluster.local:8008
     # - job_name: 'opnsense-telegraf'
     #   static_configs:
     #     - targets: ['opnsense.tribz.cloud:9273']
