--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -39,18 +39,18 @@ argo-cd:
         - secretName: argocd-tls-certificate
           hosts:
             - *host
-    metrics:
-      # -- Deploy metrics service
-      enabled: false
-      service:
-        # -- Metrics service annotations
-        annotations: {}
-        # -- Metrics service labels
-        labels: {}
-        # -- Metrics service port
-        servicePort: 8083
-        # -- Metrics service port name
-        portName: http-metrics
+    # metrics:
+    #   # -- Deploy metrics service
+    #   enabled: false
+    #   service:
+    #     # -- Metrics service annotations
+    #     annotations: {}
+    #     # -- Metrics service labels
+    #     labels: {}
+    #     # -- Metrics service port
+    #     servicePort: 8083
+    #     # -- Metrics service port name
+    #     portName: http-metrics
   dex:
     enabled: false
   # controller:
