--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -42,7 +42,8 @@ argo-cd:
         selector: 
           prometheus: monitoring-system
   controller:
-    metrics: *metrics
+    metrics:
+      *metrics
   dex:
     enabled: false
   repoServer:
