--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -53,6 +53,12 @@ argo-cd:
     env:
       - name: ARGOCD_EXEC_TIMEOUT
         value: 240s
+    metrics:
+      enabled: true
+      serviceMonitor:
+        enabled: true
+        selector: 
+          prometheus: monitoring-system
   redis:
     exporter:
       enabled: true
