--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -34,31 +34,31 @@ argo-cd:
         - secretName: argocd-tls-certificate
           hosts:
             - *host
-    metrics:
+    &metrics metrics: 
       enabled: true
       serviceMonitor:
         enabled: true
         selector: 
           prometheus: monitoring-system
   controller:
-    metrics:
-      enabled: true
-      serviceMonitor:
-        enabled: true
-        selector: 
-          prometheus: monitoring-system
+    metrics: *metrics
+      # enabled: true
+      # serviceMonitor:
+      #   enabled: true
+      #   selector: 
+      #     prometheus: monitoring-system
   dex:
     enabled: false
   repoServer:
     env:
       - name: ARGOCD_EXEC_TIMEOUT
         value: 240s
-    metrics:
-      enabled: true
-      serviceMonitor:
-        enabled: true
-        selector: 
-          prometheus: monitoring-system
+    metrics: *metrics
+      # enabled: true
+      # serviceMonitor:
+      #   enabled: true
+      #   selector: 
+      #     prometheus: monitoring-system
   redis:
     exporter:
       enabled: true
