--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -34,7 +34,7 @@ argo-cd:
         - secretName: argocd-tls-certificate
           hosts:
             - *host
-    &metrics metrics: 
+    metrics: &metrics
       enabled: true
       serviceMonitor:
         enabled: true
