--- a/apps/mediastack/values.yaml
+++ b/apps/mediastack/values.yaml
@@ -75,6 +75,7 @@ jellyfin:
   image:
     repository: lscr.io/linuxserver/jellyfin
     tag: latest
+    pullPolicy: Always
   persistence:
     config:
       enabled: true
